# books

./: .env  Cargo.toml
migrations/: 20230810213438_book.sql  20230810220021_stored_event.sql  20230810220716_author.sql  20230816222052_initial.sql
src/: application.rs  domain.rs  infrastructure.rs  main.rs
src/application/: author.rs  book.rs  book_projector.rs
src/domain/: author.rs  book.rs
src/infrastructure/: author.rs  book.rs
src/infrastructure/fixtures/: author.sql  book.sql
